--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,11 @@
 	</dependency>
 	
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-<dependency>
+<!-- <dependency>
     <groupId>com.fasterxml.jackson.core</groupId>
     <artifactId>jackson-databind</artifactId>
     <version>2.9.9</version>
-</dependency>
+</dependency> -->
 		
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
