--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -17,7 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "copyfiles -u 1 build/*.* ../main/resources/static/"
+    "postbuild": "copyfiles -u 1 build/**/* ../main/resources/static/"
   },
   "proxy": "http://localhost:8080",
   "browserslist": {
